# path_tree_python

./: .gitignore  LICENSE  README.md  Readme.org  pyproject.toml  setup.py  setup.sh  test_module.sh
path_tree/: __init__.py  node.py  path_tree.py  test.ipynb  test.py
path_tree/.ipynb_checkpoints/: test-checkpoint.py
path_tree_python.egg-info/: PKG-INFO  SOURCES.txt
ptree/: node.py  path_tree.py
ptree.egg-info/: PKG-INFO  SOURCES.txt
ptree/ptree.egg-info/: PKG-INFO  SOURCES.txt
tests/: node_test.py
