[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptree"
version = "0.1.0"
authors = [
  { name="Hong", email="hpmaatthu@gmail.com" },
]
description = "Tree Structure helps URL and path analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HongpengM/path_tree_python"
"Bug Tracker" = "https://github.com/HongpengM/path_tree_python/issues"